// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayCheckbox should render a checkbox with classes 1`] = `
<div class="custom-control custom-checkbox my-custom-class">
  <label>
    <input class="custom-control-input" ref="input" type="checkbox">
    <span class="custom-control-indicator"></span>
    <span class="custom-control-description">My Checkbox</span>
  </label>
</div>
`;

exports[`ClayCheckbox should render a checkbox with custom label content 1`] = `
<div class="custom-control custom-checkbox">
  <label>
    <input class="custom-control-input" ref="input" type="checkbox">
    <span class="custom-control-indicator"></span>
    <div>
      <h4>My Checkbox</h4>
    </div>
  </label>
</div>
`;

exports[`ClayCheckbox should render a checkbox with hidden label 1`] = `
<div class="custom-control custom-checkbox">
  <label>
    <input class="custom-control-input" ref="input" type="checkbox">
    <span class="custom-control-indicator"></span>
    <span class="custom-control-description sr-only">My Checkbox</span>
  </label>
</div>
`;

exports[`ClayCheckbox should render a checkbox with id 1`] = `
<div class="custom-control custom-checkbox" id="myId">
  <label>
    <input class="custom-control-input" ref="input" type="checkbox">
    <span class="custom-control-indicator"></span>
    <span class="custom-control-description">My Checkbox</span>
  </label>
</div>
`;

exports[`ClayCheckbox should render a checkbox with name 1`] = `
<div class="custom-control custom-checkbox">
  <label>
    <input class="custom-control-input" name="myCheckbox" ref="input" type="checkbox">
    <span class="custom-control-indicator"></span>
    <span class="custom-control-description">My Checkbox</span>
  </label>
</div>
`;

exports[`ClayCheckbox should render a checkbox with value 1`] = `
<div class="custom-control custom-checkbox">
  <label>
    <input class="custom-control-input" value="mycheckbox" ref="input" type="checkbox">
    <span class="custom-control-indicator"></span>
    <span class="custom-control-description">My Checkbox</span>
  </label>
</div>
`;

exports[`ClayCheckbox should render a checked and disabled checkbox 1`] = `
<div class="custom-control custom-checkbox">
  <label>
    <input checked="" disabled="disabled" class="custom-control-input" ref="input" type="checkbox">
    <span class="custom-control-indicator"></span>
    <span class="custom-control-description">My Checkbox</span>
  </label>
</div>
`;

exports[`ClayCheckbox should render a checked checkbox 1`] = `
<div class="custom-control custom-checkbox">
  <label>
    <input checked="" class="custom-control-input" ref="input" type="checkbox">
    <span class="custom-control-indicator"></span>
    <span class="custom-control-description">My Checkbox</span>
  </label>
</div>
`;

exports[`ClayCheckbox should render a disabled checkbox 1`] = `
<div class="custom-control custom-checkbox">
  <label>
    <input disabled="disabled" class="custom-control-input" ref="input" type="checkbox">
    <span class="custom-control-indicator"></span>
    <span class="custom-control-description">My Checkbox</span>
  </label>
</div>
`;

exports[`ClayCheckbox should render an indeterminate checkbox 1`] = `
<div class="custom-control custom-checkbox">
  <label>
    <input checked="" class="custom-control-input" ref="input" type="checkbox">
    <span class="custom-control-indicator"></span>
    <span class="custom-control-description">My Checkbox</span>
  </label>
</div>
`;

exports[`ClayCheckbox should render an inline checkbox 1`] = `
<div class="custom-control custom-checkbox custom-control-inline">
  <label>
    <input class="custom-control-input" ref="input" type="checkbox">
    <span class="custom-control-indicator"></span>
    <span class="custom-control-description">My Checkbox</span>
  </label>
</div>
`;

exports[`ClayCheckbox should render an inline checkbox with classes 1`] = `
<div class="custom-control custom-checkbox custom-control-inline my-custom-class">
  <label>
    <input class="custom-control-input" ref="input" type="checkbox">
    <span class="custom-control-indicator"></span>
    <span class="custom-control-description">My Checkbox</span>
  </label>
</div>
`;

exports[`ClayCheckbox should render an inline checkbox with custom id 1`] = `
<div class="custom-control custom-checkbox custom-control-inline" id="myCheckbox">
  <label>
    <input class="custom-control-input" ref="input" type="checkbox">
    <span class="custom-control-indicator"></span>
    <span class="custom-control-description">My Checkbox</span>
  </label>
</div>
`;

exports[`ClayCheckbox should render default markup 1`] = `
<div class="custom-control custom-checkbox">
  <label>
    <input class="custom-control-input" ref="input" type="checkbox">
    <span class="custom-control-indicator"></span>
    <span class="custom-control-description">My Checkbox</span>
  </label>
</div>
`;
